# wincode

./: Cargo.toml
wincode/: Cargo.toml
wincode-derive/: Cargo.toml
wincode-derive/src/: common.rs
wincode/src/schema/: containers.rs  impls.rs  mod.rs
