[package]
name = "wincode-derive"
version = "0.2.3"
authors = ["Anza Maintainers <maintainers@anza.xyz>"]
description = "Derive macros for wincode"
repository = "https://github.com/anza-xyz/wincode"
homepage = "https://anza.xyz/"
license = "Apache-2.0"
edition = "2021"

[lints.clippy]
default_trait_access = "deny"
manual_let_else = "deny"
used_underscore_binding = "deny"
arithmetic_side_effects = "deny"

[lints.rust]
warnings = "deny"

[lib]
proc-macro = true

[dependencies]
darling = "0.21.3"
proc-macro2 = "1.0.101"
quote = "1.0.41"
syn = { version = "2.0.106", features = ["visit-mut", "visit"] }
