[package]
name = "wincode-derive"
version = "0.2.3"
authors = ["Anza Maintainers <maintainers@anza.xyz>"]
description = "Derive macros for wincode"
repository = "https://github.com/anza-xyz/wincode"
homepage = "https://anza.xyz/"
license = "Apache-2.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
darling = "0.21.3"
proc-macro2 = "1.0.101"
quote = "1.0.41"
syn = { version = "2.0.106", features = ["visit-mut", "visit"] }
