[package]
name = "wincode"
version = "0.2.5"
authors = ["Anza Maintainers <maintainers@anza.xyz>"]
description = "Fast bincode de/serialization with placement initialization"
repository = "https://github.com/anza-xyz/wincode"
homepage = "https://anza.xyz/"
license = "Apache-2.0"
edition = "2021"
categories = ["encoding", "network-programming"]
keywords = ["binary", "encode", "serialize", "deserialize", "bincode"]

[lints.clippy]
default_trait_access = "deny"
manual_let_else = "deny"
used_underscore_binding = "deny"
arithmetic_side_effects = "deny"

[lints.rust]
warnings = "deny"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs", "-D", "warnings"]

[features]
default = ["std"]
alloc = []
std = ["alloc", "thiserror/std"]
solana-short-vec = ["dep:solana-short-vec"]
derive = ["dep:wincode-derive"]
bytes = ["dep:bytes"]

[dependencies]
bytes = { version = "1", optional = true }
solana-short-vec = { version = "3.0.0", optional = true }
thiserror = { version = "2.0.16", default-features = false }
wincode-derive = { path = "../wincode-derive", optional = true }

[dev-dependencies]
bincode = { version = "1.3.3" }
bytes = { version = "1" }
proptest = { version = "1.8.0" }
proptest-derive = "0.6.0"
rand = { version = "0.8.5" }
serde = { version = "1.0.227", features = ["derive", "rc"] }
solana-short-vec = { version = "3.0.0" }
criterion = { version = "0.8.1", features = ["html_reports"] }

[build-dependencies]
proc-macro2 = "1.0.101"
quote = "1.0.41"

[[bench]]
name = "benchmarks"
harness = false
required-features = ["std", "derive"]
